# cute-face-experiment

./: CMakeLists.txt  Makefile  README.md  focus_check.cpp  focus_check.hpp  main.cpp  moving_average.cpp  moving_average.hpp  mqtt.cpp  mqtt.h  openface.cpp  openface.hpp  selfiesegment.cpp  selfiesegment.hpp  yolov8_face.cpp  yolov8_face.h
